# SimpleSolutionsTask

./: README.md  docker-compose.yml  pyproject.toml
src/apps/items/: admin.py  models.py  views.py
src/apps/items/migrations/: 0001_initial.py
src/apps/items/templates/: base.html
src/apps/items/templates/items/: item.html  items.html
src/config/: settings.py  urls.py
src/static/css/: base.css
