[tool.poetry]
name = "simplesolutionstask"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
stripe = "^7.6.0"
pillow = "^10.1.0"
psycopg2-binary = "^2.9.9"
django-resized = "^1.0.2"
python-dotenv = "^1.0.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
